@@ -187,8 +187,8 @@
 
 			static inline void USB_Device_GetSerialString(uint16_t* UnicodeString)
 			{
-				uint_reg_t CurrentGlobalInt = USB_INT_GetGlobalEnableState();
-				USB_INT_GlobalDisable();
+				uint_reg_t CurrentGlobalInt = GetGlobalInterruptMask();
+				GlobalInterruptDisable();
 				
 				uint8_t* SigReadAddress = (uint8_t*)0x80800204;
 
@@ -208,7 +208,7 @@
 															   (('A' - 10) + SerialByte) : ('0' + SerialByte));
 				}
 				
-				USB_INT_SetGlobalEnableState(CurrentGlobalInt);
+				SetGlobalInterruptMask(CurrentGlobalInt);
 			}
 	#endif
 
